--- a/app/src/main/res/layout/item_revenue.xml
+++ b/app/src/main/res/layout/item_revenue.xml
@@ -13,7 +13,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_launcher_foreground" />
+            android:src="@drawable/money" />
 
         <LinearLayout
             android:layout_width="145dp"
