--- a/app/src/main/res/layout/activity_add_revenue.xml
+++ b/app/src/main/res/layout/activity_add_revenue.xml
@@ -47,7 +47,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Save" />
-    </LinearLayout>
 
+    </LinearLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <ListView
+        android:id="@+id/revenueListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+</LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
